app-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: alurabook-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alurabook-vs
spec:
  hosts:
    - "*"
  gateways:
    - alurabook-gateway
  http:
    - match:
        - uri:
            prefix: /sistema
      rewrite:
        uri: "/"
      route:
        - destination:
            host: sistema-svc
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: portal-svc
            port:
              number: 80
